# cpptempl

./: .clang-format  .clang-tidy  .editorconfig  .env  .gitignore  .prettierrc.toml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.cmake  vcpkg.json
.config/: vcpkg.cmake
.github/: labeler-files.yml  labeler-misc.yml
.github/workflows/: pr.yml  validation.yml
cmake/: vcpkg.cmake
scripts/: bootstrap-linux.sh  bootstrap-windows.ps1  list-ap-repos.sh
scripts/ci/: linux.sh
src/: CMakeLists.txt
src/app/sample/: CMakeLists.txt  main.cpp
src/inc/: core.h
src/lib/: CMakeLists.txt  core.cpp
src/test/: CMakeLists.txt  test_ut_corelib.cpp
src/tests/: CMakeLists.txt  test_ut_corelib.cpp  ut_corelib.cpp
